# pytorch-learning-notes

./: .gitignore  README.md  requirements.txt
Classification/: gen_fashion_dataset.py  predict.py  train_resNet.py  train_simpleNet.py
Classification/core/: __init__.py  simpleNet.py
Classification/dataset/fashion_mnist/: test.txt
Classification/dataset/test_images/: train.txt  train2.txt
Classification/utils/: dataset.py  image_processing.py
DeepLearningTutorials/: README.md
DeepLearningTutorials/AutoEncoder实战/: .gitignore  ae.py  main.py  vae.py
DeepLearningTutorials/Cifar10与ResNet18实战/: .gitignore  lenet5.py  main.py  resnet.py
DeepLearningTutorials/lesson53-情感分类实战/: lstm.ipynb  lstm.py
DeepLearningTutorials/lesson62-65-GAN实战/: gan.py  wgan_gp.py
UNet/: README.md  eval.py  my_predict.py  my_train.py  my_train2.py  predict.py
UNet/unet/: Loss.py  unet_dilated.py  unet_model.py  unet_parts.py
UNet/utils/: PairRandomCrop.py  __init__.py  dataset.py  image_processing.py  load.py  my_train.txt  utils.py
caffe2-android/: README.md  import-summary.txt
caffe2-android/OpenCV-android-sdk/samples/: example-15-puzzle.apk  example-camera-calibration.apk  example-color-blob-detection.apk  example-face-detection.apk  example-image-manipulations.apk  example-tutorial-1-camerapreview.apk  example-tutorial-2-mixedprocessing.apk  (+1 more)
caffe2-android/app/: CMakeLists-bk.txt  CMakeLists.txt  build.gradle
caffe2-android/app/src/androidTest/java/com/panjq/opencv/opencvdemo/: ExampleInstrumentedTest.java
caffe2-android/app/src/main/: AndroidManifest.xml
caffe2-android/app/src/main/assets/: squeeze_init_net_6.pb  squeeze_pred_net_6.pb
caffe2-android/app/src/main/cpp/: AndroidDebug.cpp  AndroidDebug.h  classes.h  com_panjq_opencv_alg_ImagePro.h  imagePro.cpp
caffe2-android/app/src/main/cpp/caffe2/core/: macros.h  tensor.h
caffe2-android/app/src/main/cpp/caffe2/proto/: caffe2.pb.h  caffe2_legacy.pb.h  hsm.pb.h  metanet.pb.h  predictor_consts.pb.h  prof_dag.pb.h
caffe2-android/app/src/main/java/: JNI_RUN.bat
caffe2-android/app/src/main/java/com/panjq/opencv/alg/: ImageData.java  ImagePro.java
caffe2-android/app/src/main/java/com/panjq/opencv/opencvdemo/: LogUtil.java  MainActivity.java
caffe2-android/app/src/main/res/layout/: activity_main.xml
caffe2-android/app/src/main/res/values/: strings.xml
caffe2-android/app/src/test/java/com/panjq/opencv/opencvdemo/: ExampleUnitTest.java
caffe2-android/openCVLibrary342/: build.gradle
dataset/fashion_mnist/: label_name.txt
distributed-pytorch/: README.md  distributed-pytorch.py  distributed_imagenet.py  distributed_imagenet_custom.py  imagenet.py
gen-efficientnet-pytorch/: predictor.py
gen-efficientnet-pytorch/utils/: image_processing.py  train.txt
image_classification/: convert_torch_to_onnx_caffe2.py  fashion_mnist_cnn.py  finetune_predict.py  performance_test.py  predict.py  test_demo.py  train_mobileNet_V1.py  train_mobileNet_V2.py  train_resNet.py  train_resNet_restore.py  train_resnet18_finetune.py  train_simpleNet.py  train_squeezenet.py
image_classification/core/: README for mobileNet_V1.md  mobileNet_V1.py  mobileNet_V2.py  resNetBatchNorm.py  resRegularBn.py  resnet.py  squeezenet.py
image_classification/utils/: CustomDatasetFolder.py  __init__.py  concat_dataset.py  convert_onnx_caffe2_test.py  convert_onnx_to_caffe2.py  convert_to_trace_model.py  custom_collate_fn.py  dataset.py  dataset_collate.py  dataset_v2.py  dataset_v4.py  dataset_v5.py  dataset_v6.py  file_processing.py  fun.py  image_processing.py  imagefolder_dataset.py  imagefolder_pytorch.py  load_dataset.py
libtorch_demo/: README.md  convert_to_trace_model.py  libtorch_for_resnet18.py
libtorch_demo/example_app/: CMakeLists.txt  main.cpp
libtorch_demo/opencv-libtorch/: CMakeLists.txt  opencv_libtorch.cpp
modules/GCN/: __init__.py  demo.py
modules/efficientnet/: README.md  efficientnet.py
modules/featuremap/: feature_extractor.py  get_cnn_featuremap.py
modules/performance/: main2.py  main3.py  performance_main.py
modules/save_load/: dmai_model.py  model_data.pth  save_load_model.py  save_load_model2.py
modules/tensorrt_demo/: README.md  batch_norm.py  collect_env.py  demo.py  demo2.py  md5sum.txt  requirements.txt  torch_to_onnx.py  transform_onnx.py
modules/transfer_model/: main.py  main2.py  orderDict.py
modules/transform/: __init__.py  custom_transform.py  transform_demo.py
modules/utils/: debug.py  json_utils.py
modules/visualizer/: README.md  graphviz_model_info.ipynb  graphviz_model_info2.ipynb  tensorboard-demo.py  tensorwatch_gen_data.py  torchviz_demo.py  torchviz_demo2.py  vision_demo.ipynb  vision_for_tensorwatch.ipynb  vision_for_tensorwatch2.ipynb
multi_label/: Classify_scenes.ipynb  Classify_scenes.py  README.md  multi_label_example.py  predict.py  train.py
multi_label/core/: data.csv  dataset.py  pre_dataset.py
object_detection/: my_train_ssd.py  run_ssd_example.py  train_ssd.py
object_detection/MobileNet_SSD/: README_for_train.md  my_train_ssd.py  my_voc_train_ssd.py  run_ssd_for_PCwall.py  run_ssd_for_image.py  voc_label.py
object_detection/utils/: __init__.py  file_processing.py  image_processing.py
torch_onnx/: Loading_Pretrained_Models.py  README.md  convert_torch_to_onnx_caffe2.py  opencv_dnn_onnx_demo.cpp  opencv_dnn_onnx_demo.py  opencv_dnn_onnx_for_mb_ssd.py  opencv_dnn_torch_demo.py  super_resolution.onnx  super_resolution_with_caffe2_zh.py
tutorials/Cifar10与ResNet18实战/: main.py
tutorials/lesson22-优化小实例/: main.py
tutorials/lesson26-LR多分类实战/: main.py
tutorials/lesson27-MLP网络层/: main.py
tutorials/lesson28-激活函数与GPU加速/: main.py
tutorials/lesson29-MNIST测试/: main.py
tutorials/lesson32-Train-Val-Test-交叉验证/: main.py
tutorials/lesson33-regularization/: main.py
tutorials/lesson35-early stopping, dropout, sgd/: main.py
tutorials/lesson42-ResNet/: resnet.py
tutorials/lesson43-nn.Module/: main.py
tutorials/lesson44-数据增强/: main.py
tutorials/lesson46-时间序列表示/: main.py
tutorials/lesson48-RNN Layer使用/: rnn.py
tutorials/lesson49-时间序列预测/: seris.py
(+261 files in other folders)
